<resources>
    <string name="app_name">Cllasify</string>
    <string name="splash_heading">Hi there !</string>
    <string name="done">Welcome</string>
    <string-array name="classMore">
        <item>Rename class</item>
        <item>Delete class</item>
        <item>Edit RollNumbers</item>
    </string-array>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="feed">Feed</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name"><font size="15">Hint here!</font> </string>
    <string name="hint_edittext_doubt"><font size="15">Answer...</font> </string>
    <string name="start_panel_name">Start Panel</string>
    <string name="center_panel_name">Welcome to Server</string>
    <string name="end_panel_name">End Panel</string>
    <string name="swipe_gesture_instructions">Swipe left to see your Group or right to Open profile.</string>
    <string name="open_start_panel_instructions">Alternatively, call methods like openStartPanel() (e.g. in response to a button click).</string>
    <string name="open_start_panel_button_text">Open Start Panel</string>
    <string name="child_gesture_region_instructions">Use PanelsChildGestureRegionObserver to not handle panel gestures on selected child views.</string>
    <string name="scroll_item_1">scroll item 1</string>
    <string name="scroll_item_2">scroll item 2</string>
    <string name="scroll_item_3">scroll item 3</string>
    <string name="scroll_item_4">scroll item 4</string>
    <string name="scroll_item_5">scroll item 5</string>
    <string name="user_profile">User Profile</string>
    <string name="edit">edit</string>
    <string name="username">Username</string>
    <string name="user_badge">User Badge</string>
    <string name="user_coin">User Coin</string>
    <string name="introduction">Introduction</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="email">Email</string>
    <string name="phone_No">Phone No</string>
    <string name="friend_request">Friend Request</string>
    <string name="chats">Chats</string>
    <string name="answers">Answers</string>
    <string name="thanks">Thanks</string>
    <string name="questions">Questions</string>
    <string name="user_signout">User Signout</string>
    <string name="category">Category</string>
    <string name="ask_question">Ask Question</string>
    <string name="user_asked">User Asked</string>
    <string name="enter_category">Enter Category in which you want to add question</string>
    <string name="category_hint"> ( Php, Android, Java, Python etc) </string>
    <string name="add">Add</string>
    <string name="comment">Comment</string>
    <string name="account_type">Choose your Account Type</string>
    <string name="sign_phone">Sign in Using Phone No</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register_student">Register as a student</string>
    <string name="register_teacher">Register as a teacher</string>
    <string name="wanna_login">Would you like to Log In</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
    <string name="add_answer">Add Answer..</string>
    <string name="post">Post</string>
    <string name="asked_on">Asked on:</string>
    <string name="please_answer">Please Answer, If you Know?</string>
    <string name="view_answer">View All Answer</string>
    <string name="enter_phone">Enter Phone No</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="login">You need to Login using you google ID to proceed</string>
    <string name="or">OR</string>
    <string name="account">Account</string>
    <string name="online_status">Online Status</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="servers">Servers</string>
    <string name="account_settings">Account Settings</string>
    <string name="set_presence">Set Presence</string>
    <string name="my_account">My Account</string>
    <string name="title_activity_profile_mine">ProfileMine</string>
    <string name="flowers">Flowers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_content_available">No content available</string>
    <string name="no_content_available2">No content available at this time</string>
    <string name="save">save</string>
    <string name="no_subscriptions">No subscriptions</string>
    <string name="browse_channels">Browse channels</string>
    <string name="browse_channels_benefits">Browse channels to check out different subscriptions benefits</string>
    <string name="better_together">Cllasify is better together</string>
    <string name="add_friend">Add Friends</string>
    <string name="social">Social</string>
    <string name="friend">Friends</string>
    <string name="request">Request</string>
    <string name="presence">Presence</string>
    <string name="online">Online</string>
    <string name="busy">Busy</string>
    <string name="invisible">Invisible</string>
    <string name="friends_see">How friends see you in their Friends list</string>
    <string name="share_activity">Share my activity</string>
    <string name="watching_status">Let your friends know which channel you are currently watching</string>
    <string name="set_status">Set Status</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="help">Help</string>
    <string name="go_premium">Go Premium</string>
    <string name="log_out">Log Out</string>
    <string name="edit_username">Edit Username</string>
    <string name="tag">Tag</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="account_manage">ACCOUNT MANAGEMENT</string>
    <string name="disable_acc">Disable Account</string>
    <string name="delete_acc">Delete Account</string>
    <string name="enter_phoneno">Enter a Phone Number</string>
    <string name="receive_msg">You will receive a text message with a verification code</string>
    <string name="country_code">Country Code</string>
    <string name="PhoneNo">Phone Number</string>
    <string name="verify_number">Verify Your Number</string>
    <string name="enter_code">Enter the 6 digit code we sent to your phone</string>
    <string name="send">Send</string>
    <string name="change_pass">Change Password</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="delete_sure">Are you sure that you want to delete your account?</string>
    <string name="disable_sure">Are you sure that you want to disable your account?</string>
    <string name="delete_sure_again">This will immediately log you out of your account and you will not be able to log in again.</string>
    <string name="disable_sure_again">This will immediately log out and make your account inaccessible to anyone</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="safe_direct_messaging">SAFE DIRECT MESSAGING</string>
    <string name="auto_delete_msg">Automatically scan and delete direct messages you receive that contain media content.</string>
    <string name="keep_me_safe">Keep me safe</string>
    <string name="scan_everyone">Scan direct messages from everyone</string>
    <string name="friends_are_nice">My friends are nice</string>
    <string name="scan_everyone_not_friends">Scan direct messages from everyone unless they are a friend</string>
    <string name="do_not_scan">Do not scan</string>
    <string name="not_scan">Direct messages will not be scanned for explicit</string>
    <string name="server_privacy">SERVER PRIVACY DEFAULTS</string>
    <string name="allow_msg_servers">Allow direct messages from server members</string>
    <string name="setting_applied">This setting is applied when you join a new server. it does not apply retroactively to your existing servers.</string>
    <string name="who_send_req">WHO CAN ADD YOU AS A FRIEND</string>
    <string name="everyone">Everyone</string>
    <string name="friends_of_friends">Friends of Friends</string>
    <string name="server_members">Server Members</string>
    <string name="how_use_data">HOW TO USE YOUR DATA</string>
    <string name="use_data_improved">Use data to improve Cllasify</string>
    <string name="improved_info">This setting allow us to use and process information about how you navigate and use Cllasify for analytical purposes. For example, it allows us to include you in new feature experiments we text</string>
    <string name="learn_more">Learn more about it here</string>
    <string name="use_data_customize">Use data to customize your Cllasify experience</string>
    <string name="customize_info">This setting allow us to use information, such as who you talk to and how you use Cllasify, to customize Cllasify for you</string>
    <string name="track_screen">Allow Cllasify to track screen reader usage</string>
    <string name="track_info">This setting allow us to record when you use a screen reader while using Cllasify so that we can improve accessibility</string>
    <string name="use_cllasify_work">Use data to make Cllasify work</string>
    <string name="cllasify_work_info">We need to store and process some data in order to provide you that basic Cllasify service, such as your messages, what servers you are in and your Direct Messages. By using Cllasify, you allow us to provide this basic service. You can stop this by</string>
    <string name="Dis_or_del">Disabling or Deleting your account.</string>
    <string name="request_data">Request Data</string>
    <string name="request_data_info">Within 30 Days we will send you an email to the address you registered with when the package is ready</string>
    <string name="what_is_this">What is this?</string>
    <string name="disable">Disable</string>
    <string name="okay">Okay</string>
    <string name="log_out_sure">Are you sure you want to LogOut?</string>
    <string name="pause_all">Pause All</string>
    <string name="question_and_answer">Question and Answer</string>
    <string name="messages">Messages</string>
    <string name="message_req">Message Requests</string>
    <string name="upvote">Upvote</string>
    <string name="server_req">Server Requests</string>
    <string name="downvote">Downvote</string>
    <string name="repeat">Repeat</string>
    <string name="qus_upload">Question Uploads</string>
    <string name="push_noti">Push Notification</string>
    <string name="on">On</string>
    <string name="qus_and_ans_example">johnappleseed answer your question</string>
    <string name="off">Off</string>
    <string name="msg_req_example">johnappleseed wants to send you a message</string>
    <string name="server_req_example">johnappleseed wants to add johnappleseed to your group</string>
    <string name="msg_example">johnappleseed sent you a message</string>
    <string name="server_mention">Server mention</string>
    <string name="server_mention_example">johnappleseed mention and send you a message</string>
    <string name="system_default">System Default</string>
    <string name="report_problem">Report problem</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="help_centre">Help Centre</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="notification">Notification</string>
    <string name="rename_subject">Rename subject</string>
    <string name="hint_subject_name"><font size="15">Rename Subject Name...</font> </string>
    <string name="rename_next">Next</string>
</resources>