<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/popup_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ll_edit">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out_sure"
            android:textColor="@color/page_black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:background="@drawable/button_gradient_small"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/yes"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:background="@drawable/button_gradient_small"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/no"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"/>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>