<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Set_Status"
    android:id="@+id/rootLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/ll_edit"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@+id/rootLayout"
        app:layout_constraintLeft_toLeftOf="@+id/rootLayout"
        app:layout_constraintRight_toRightOf="@+id/rootLayout">

    <Button
        android:layout_width="36dp"
        android:layout_height="16dp"
        android:drawableEnd="@drawable/ic_left_back"
        android:id="@+id/btn_Cancel"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_edit"
        app:layout_constraintBottom_toBottomOf="@id/ll_edit"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/ll_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_edit"
        android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_edit">

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/page_black"
            android:text="@string/online"
            android:layout_marginTop="20dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true"/>


        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/page_black"
            android:text="@string/busy"
            android:layout_marginTop="30dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"/>

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/page_black"
            android:text="@string/invisible"
            android:layout_marginTop="30dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/friends_see"
            android:textColor="@color/page_black"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_activity"
            android:layout_marginTop="50dp"
            android:textColor="@color/page_black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:checked="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/watching_status"
            android:textColor="@color/page_black"
            android:textSize="14sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>