<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_creategroup"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:id="@+id/tv_AddClassTitle"
            android:text="@string/rename_subject"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/text_color"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/hint_subject_name"
            android:textCursorDrawable="@drawable/cursor_color"
            android:id="@+id/et_SubjectName"
            android:inputType="textCapSentences|textMultiLine"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_gradient"
            android:layout_gravity="center"
            android:textColor="@color/btn_text_white"
            android:text="@string/rename_next"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_nextAddTopic"/>

    </LinearLayout>



</RelativeLayout>